user profile page can show the edit toggle (no longer hidden by navbar)

--- a/less/survey.less
+++ b/less/survey.less
@@ -2,10 +2,12 @@
     width: 80vw;
     display: flex;
     flex-direction: row;
+    // align-items: center;
 }
 
-.form-widget div {
-    margin: 7px 0px;
+.form-widget {
+    height: 94vh;
+    margin: 250px 0px 50px 0px;
 }
 
 .form-widget label {
